networkpolicy/nginxapp/devonedemoapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: devoneapp
  namespace: devone
  labels:
    app: devoneapp
spec:
  containers:
  - name: devoneapp-container
    image: nginx
    ports:
    - containerPort: 80
